--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -49,6 +49,8 @@ jobs:
         # Check if gh-pages branch exists
         if git show-ref --quiet refs/heads/gh-pages; then
           echo "gh-pages branch exists"
+          git checkout gh-pages
+          git pull origin gh-pages
         else
           echo "gh-pages branch does not exist. Creating gh-pages branch."
           git checkout --orphan gh-pages
