--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -49,8 +49,6 @@ jobs:
         # Check if gh-pages branch exists
         if git show-ref --quiet refs/heads/gh-pages; then
           echo "gh-pages branch exists"
-          git checkout gh-pages
-          git pull origin gh-pages
         else
           echo "gh-pages branch does not exist. Creating gh-pages branch."
           git checkout --orphan gh-pages
@@ -70,4 +68,9 @@ jobs:
         cd /tmp/gh-pages
         git add .
         git commit -m "Deploy to GitHub Pages"
+        
+        # Pull latest changes from remote gh-pages branch to avoid conflicts
+        git pull origin gh-pages --rebase
+        
+        # Push changes to remote gh-pages branch
         git push origin gh-pages
