--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,6 +50,7 @@ jobs:
         if git show-ref --quiet refs/heads/gh-pages; then
           echo "gh-pages branch exists"
           git checkout gh-pages
+          git pull origin gh-pages
         else
           echo "gh-pages branch does not exist. Creating gh-pages branch."
           git checkout --orphan gh-pages
