--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,12 +27,12 @@ jobs:
       run: |
         cd service/ToDoList
         python -m pip install --upgrade pip
-        pip3 install -r requirements.txt
+        pip install -r requirements.txt
 
     # - name: Run Tests
     #   run: |
     #     cd service/ToDoList
-    #     python3 manage.py test
+    #     python manage.py test
 
     - name: Deploy to GitHub Pages
       if: success()
